objects/LLC_BI__Template_Records__c.object
<CustomObject>
    <description>Templatation Object to house all records used as a template for other objects</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Basis_Source__c</fullName>
        <description>Users populate this optional picklist with the basis for percentage fees, such as loan amount or another loan field. This field is used when Calculation Type is equal to percent. By default, it is blank.</description>
        <inlineHelpText>Select the basis for percentage fees, such as loan amount, total interest, or another loan field.</inlineHelpText>
        <label>Basis Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LLC_BI__Amount__c</fullName>
                    <label>Loan Amount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>The category field is required and specifies the template record&apos;s functional area of the ncino system. Currently, Fee Management is the only feature utilizing the templated object. It is manually populated.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fees Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box option is required and helps to establish a yes/no attribute of the template record. This option is dependent on the category used. In the fee management feature, checkboxes are used to specify if this is a multiple fee (can be applied more than once per loan) as well as whether is it included in APR (No additional functionality built into the APR field yet). It is manually populated.</description>
        <label>Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box option is required and helps to establish a yes/no attribute of the template record. This option is dependent on the category used. In the fee management feature, checkboxes are used to specify if this is a multiple fee (can be applied more than once per loan) as well as whether is it included in APR (No additional functionality built into the APR field yet). It is manually populated.</description>
        <label>Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checkbox_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box option is required and helps to establish a yes/no attribute of the template record. This option is dependent on the category used. In the fee management feature, checkboxes are used to specify if this is a multiple fee (can be applied more than once per loan) as well as whether is it included in APR (No additional functionality built into the APR field yet). It is manually populated.</description>
        <label>Checkbox 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CounterCount__c</fullName>
        <description>This field is used as a string field in conjunction with Text field 1 to create the unique identifier for the template record.</description>
        <displayFormat>{000}</displayFormat>
        <label>CounterCount</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Currency_Field_1__c</fullName>
        <description>This field is required and sets a specific currency amount. If needed for the template record, this would be dependent on category selected. In fee management, the currency field is used to specify the dollar amount of the fee record.  This field is manually populated.</description>
        <label>Currency Field 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is optional and specifies the end date used to drive the active or inactive status of this template record. Setting the end date is not required if the template record has no end date and will go on indefinitely. This field is manually populated.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <description>This field is required and confirms that the template is active. The active flag checks when within the specified period based on start and end dates.The field is manually populated.</description>
        <formula>IF((LLC_BI__Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;=  LLC_BI__End_Date__c) || (LLC_BI__Start_Date__c &lt;= TODAY() &amp;&amp; ISBLANK(LLC_BI__End_Date__c)) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percentage__c</fullName>
        <description>Users populate this optional field with the percentage they want the system to use to calculate the fee based on the basis value. By default, it is blank.</description>
        <inlineHelpText>Enter the percentage you want the system to use to calculate the fee based on the basis value.</inlineHelpText>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Picklist_1__c</fullName>
        <description>The picklist field establishes the specific category&apos;s template record.  Different options can be selected depending on the category. In the fee management feature, picklist 1 drives the specific fee type. The field is manually populated.</description>
        <label>Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application Fee</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Consumer Appraisal</fullName>
                </value>
                <value>
                    <fullName>Consumer Attorney Closing</fullName>
                </value>
                <value>
                    <fullName>Consumer Credit Report</fullName>
                </value>
                <value>
                    <fullName>Consumer DMV</fullName>
                </value>
                <value>
                    <fullName>Consumer Flood</fullName>
                </value>
                <value>
                    <fullName>Consumer Origination</fullName>
                    <label>Consumer Non-RE Origination</label>
                </value>
                <value>
                    <fullName>Consumer RE Origination</fullName>
                </value>
                <value>
                    <fullName>Consumer Title Search</fullName>
                </value>
                <value>
                    <fullName>Credit Report</fullName>
                </value>
                <value>
                    <fullName>DMV</fullName>
                </value>
                <value>
                    <fullName>Flood Determination Fee</fullName>
                </value>
                <value>
                    <fullName>Flood Monitoring Fee</fullName>
                </value>
                <value>
                    <fullName>Government Recording</fullName>
                </value>
                <value>
                    <fullName>Homeowner&apos;s Insurance</fullName>
                </value>
                <value>
                    <fullName>Homeowner&apos;s Insurance Premium</fullName>
                </value>
                <value>
                    <fullName>Loan Origination</fullName>
                </value>
                <value>
                    <fullName>Mortgage Insurance</fullName>
                </value>
                <value>
                    <fullName>Mortgage Insurance Premium</fullName>
                </value>
                <value>
                    <fullName>Pest Inspection Fee</fullName>
                </value>
                <value>
                    <fullName>Prepaid Interest</fullName>
                </value>
                <value>
                    <fullName>Property Taxes</fullName>
                </value>
                <value>
                    <fullName>Recording Fees and Other Taxes</fullName>
                </value>
                <value>
                    <fullName>SBA Fee</fullName>
                </value>
                <value>
                    <fullName>Settlement/Close</fullName>
                </value>
                <value>
                    <fullName>State Tax Stamps</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Survey Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Picklist_2__c</fullName>
        <description>This picklist field is required and establishes the specific category&apos;s template record . Different options can be selected depending on the category. In the fee management feature, picklist 2 determines the party responsible for paying the fee. The field is manually populated.</description>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Picklist_3__c</fullName>
        <description>This picklist field is required and establishes the specific category&apos;s template record. Different options can be selected depending on the category. In the fee management feature, picklist 3 is the fee code used for the specific template record. The field is manually populated.</description>
        <label>Picklist 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Record_Type__c</fullName>
        <description>Users populate this optional picklist with the record type of the fee, cost, or adjustment. By default, it is blank.</description>
        <inlineHelpText>Select the record type of the fee, cost, or adjustment.</inlineHelpText>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Costs</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators populate this optional field with the screen section name to determine the fields displayed to a user for completion when adding a fee to a loan. By default, it is blank.</description>
        <inlineHelpText>Populate this optional field with screen section name to determine the fields displayed to a user for completion when adding fees to a loan.</inlineHelpText>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Template Records</relationshipLabel>
        <relationshipName>Template_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>This field is required and specifies the start date used to drive the active or inactive status of this template record. Setting the start date is required to activate the template record. This field is manually populated.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Text_Field_1__c</fullName>
        <description>This field specifies the template record&apos;s creation detail, which is dependent on the chosen category. Text field 1 is used in conjunction with the countercount__c field to specify the unique identifier for the template record. In fee management, Text field 1 =&quot; Fee&quot;and the counter would specify the number of that fee record Fee-001.</description>
        <label>Text Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Text_Field_2__c</fullName>
        <description>This field is optional and specifies the template record&apos;s creation detail, which is dependent on the category chosen. In fee management, only one text field is utilized, specifying the stage at which a fee should be automatically applied. This field is manually populated.</description>
        <label>Text Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loan_Cost_Category__c</fullName>
        <inlineHelpText>This is used to determine the type of loan cost for TRID. This associates fees with the proper categories for loan estimate and closing disclosure.</inlineHelpText>
        <label>Loan Cost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loan_cost</fullName>
                    <label>Loan Cost</label>
                </value>
                <value>
                    <fullName>Other Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Cost_Subcategory__c</fullName>
        <inlineHelpText>This determines another level of TRID calculations</inlineHelpText>
        <label>Loan Cost Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loan_Cost_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Origination Charges</fullName>
                </value>
                <value>
                    <fullName>Services You Cannot Shop For</fullName>
                </value>
                <value>
                    <fullName>Services You Can Shop For</fullName>
                </value>
                <value>
                    <fullName>Taxes and Other Government Fees</fullName>
                </value>
                <value>
                    <fullName>Prepaids</fullName>
                </value>
                <value>
                    <fullName>Initial Escrow Payment at Closing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Template Records</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Picklist_1__c</columns>
        <columns>Loan_Cost_Category__c</columns>
        <columns>Loan_Cost_Subcategory__c</columns>
        <columns>LLC_BI__Start_Date__c</columns>
        <columns>LLC_BI__End_Date__c</columns>
        <columns>LLC_BI__Currency_Field_1__c</columns>
        <columns>LLC_BI__Picklist_2__c</columns>
        <columns>LLC_BI__Checkbox_3__c</columns>
        <columns>LLC_BI__Checkbox_2__c</columns>
        <columns>LLC_BI__Text_Field_2__c</columns>
        <columns>LLC_BI__Is_Active__c</columns>
        <columns>LLC_BI__Picklist_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Is_Active__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Loan_Cost_Category__c</field>
            <operation>equals</operation>
            <value>Loan_cost,Other Cost</value>
        </filters>
        <label>TRID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR - {00000000}</displayFormat>
        <label>Template Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Records</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Fee_Management_Record_Type</fullName>
        <active>true</active>
        <description>Template for Fee Management</description>
        <label>Fee Management Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Starting_Record_Type</fullName>
        <active>true</active>
        <description>Starting Record Type to Select True Template</description>
        <label>Starting Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Percentage_Fee_Required_Fields</fullName>
        <active>true</active>
        <description>When calculation type equals Percentage, Basis Source and Percentage fields are required.</description>
        <errorConditionFormula>ISPICKVAL(LLC_BI__Picklist_4__c, &apos;Percentage&apos;) &amp;&amp; (ISPICKVAL(LLC_BI__Basis_Source__c, &apos;&apos;) || ISNULL(LLC_BI__Percentage__c))</errorConditionFormula>
        <errorMessage>Ensure values are entered for Basis Source and Percentage so the system can calculate the percentage calculation type.</errorMessage>
    </validationRules>
</CustomObject>